--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,24 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "X-Frame-Options": "DENY",
+        "X-Content-Type-Options": "nosniff",
+        "X-XSS-Protection": "1; mode=block"
+      }
     }
   ],
   "github": {
-    "silent": true
+    "silent": true,
+    "autoAlias": true
+  },
+  "public": true,
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "regions": ["sfo1"],
+  "env": {
+    "NODE_ENV": "production"
   }
 }
