--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "m0-m1-dynamic-calc",
   "version": "1.0.0",
+  "private": true,
+  "packageManager": "pnpm@8.9.0",
   "description": "Interactive calculator for understanding money supply dynamics",
   "main": "script.js",
   "scripts": {
-    "start": "serve .",
-    "deploy": "vercel deploy"
+    "dev": "pnpm serve",
+    "serve": "serve .",
+    "build": "echo 'No build step required'",
+    "deploy": "vercel deploy --prod"
   },
   "keywords": [
     "economics",
@@ -17,10 +21,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^4.4.1"
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0"
   },
   "devDependencies": {
     "serve": "^14.2.1",
-    "vercel": "^33.0.1"
+    "vercel": "^32.3.0"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8"
   }
 }
