--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.0"
+    "chart.js": "^4.4.0",
+    "mathjs": "^11.8.0"
   },
   "devDependencies": {
     "serve": "^14.2.1",
