Add calculator history feature and enhance theme handling; update styles and package dependencies

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 engine-strict=true
+enable-pre-post-scripts=true
 auto-install-peers=true
-shamefully-hoist=true
 strict-peer-dependencies=false
+shamefully-hoist=true
 save-exact=true
