--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "m0-m1-dynamic-calc",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@10.5.1",
   "description": "Interactive calculator for understanding money supply dynamics",
   "main": "script.js",
   "scripts": {
@@ -23,14 +23,20 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
-    "mathjs": "^11.8.0"
+    "mathjs": "^11.12.0"
   },
   "devDependencies": {
     "serve": "^14.2.1",
     "vercel": "^32.3.0"
   },
   "engines": {
-    "node": ">=18",
-    "pnpm": ">=8"
+    "node": ">=18.0.0",
+    "pnpm": ">=10.0.0"
+  },
+  "readme": "## Installation\n\n1. Install pnpm globally: `npm install -g pnpm@10.5.1`\n2. Install dependencies: `pnpm install`\n3. Start dev server: `pnpm dev`",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
