--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "m0-m1-dynamic-calc",
+  "name": "dynamic-calc",
   "version": "1.0.0",
   "private": true,
   "packageManager": "pnpm@10.5.1",
   "description": "Interactive calculator for understanding money supply dynamics",
   "main": "script.js",
   "scripts": {
-    "dev": "pnpm serve",
+    "dev": "vite",
     "serve": "serve .",
-    "build": "echo 'No build step required'",
-    "deploy": "vercel deploy --prod"
+    "build": "tsc && vite build",
+    "deploy": "vercel deploy --prod",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "keywords": [
     "economics",
@@ -27,7 +31,13 @@
   },
   "devDependencies": {
     "serve": "^14.2.1",
-    "vercel": "^32.3.0"
+    "vercel": "^32.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "ts-jest": "^29.1.0"
   },
   "engines": {
     "node": ">=18.0.0",
