--- a/vercel.json
+++ b/vercel.json
@@ -1,40 +1,25 @@
 {
   "version": 2,
+  "buildCommand": false,
+  "outputDirectory": ".",
   "builds": [
     {
       "src": "*.html",
       "use": "@vercel/static"
     },
     {
-      "src": "*.js",
+      "src": "js/*.js",
       "use": "@vercel/static"
     },
     {
-      "src": "*.css",
+      "src": "css/*.css",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/$1",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable",
-        "X-Frame-Options": "DENY",
-        "X-Content-Type-Options": "nosniff",
-        "X-XSS-Protection": "1; mode=block"
-      }
+      "dest": "/$1"
     }
-  ],
-  "github": {
-    "silent": true,
-    "autoAlias": true
-  },
-  "public": true,
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "regions": ["sfo1"],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
