--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,16 +13,22 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Setup PNPM
+      uses: pnpm/action-setup@v2
+      with:
+        version: 10.5.1
+        
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'
+        cache: 'pnpm'
         
     - name: Install dependencies
-      run: npm ci
+      run: pnpm install
       
     - name: Run tests
-      run: npm test
+      run: pnpm test
 
   deploy:
     needs: build
@@ -33,11 +39,10 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+        uses: vercel/actions/cli@master
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          zeit-token: ${{ secrets.VERCEL_TOKEN }}  # Backward compatibility
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
-          working-directory: .
