--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "main": "script.js",
   "scripts": {
     "dev": "vite",
-    "serve": "serve .",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "preview": "vite preview",
     "deploy": "vercel deploy --prod",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "keywords": [
     "economics",
@@ -32,12 +31,25 @@
   "devDependencies": {
     "serve": "^14.2.1",
     "vercel": "^32.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.6"
+  },
+  "resolutions": {
+    "glob": "^8.1.0",
+    "uuid": "^9.0.0",
+    "debug": "^4.3.4",
+    "rimraf": "^5.0.0",
+    "gauge": "^5.0.0",
+    "npmlog": "^7.0.1",
+    "abab": "^2.0.6",
+    "are-we-there-yet": "^4.0.2",
+    "domexception": "^4.0.0",
+    "inflight": "^1.0.6"
   },
   "engines": {
     "node": ">=18.0.0",
