--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,16 @@
 {
   "version": 2,
-  "buildCommand": false,
-  "outputDirectory": ".",
-  "builds": [
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "js/*.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "css/*.css",
-      "use": "@vercel/static"
-    }
-  ],
+  "framework": "vite",
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/[^.]+",
+      "destination": "/index.html"
     }
   ]
 }
