--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "mathjs": "^11.12.0"
   },
   "devDependencies": {
-    "serve": "^14.2.1",
-    "vercel": "^32.3.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
+    "@types/next": "9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.2.6"
+    "serve": "^14.2.1",
+    "ts-jest": "^29.2.6",
+    "vercel": "^32.3.0"
   },
   "resolutions": {
     "glob": "^8.1.0",
@@ -58,7 +59,8 @@
   "readme": "## Installation\n\n1. Install pnpm globally: `npm install -g pnpm@10.5.1`\n2. Install dependencies: `pnpm install`\n3. Start dev server: `pnpm dev`",
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "sharp"
     ]
   }
 }
