--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dynamic-calc",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@10.5.1",
+  "packageManager": "pnpm@10.5.2",
   "description": "Interactive calculator for understanding money supply dynamics",
   "main": "script.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "deploy": "vercel deploy --prod",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "keywords": [
@@ -24,39 +25,45 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/lodash": "4.17.15",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
-    "mathjs": "^11.12.0"
+    "mathjs": "^14.2.1",
+    "next": "^15.2.0",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.4",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
+    "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
-    "@types/next": "9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "serve": "^14.2.1",
     "ts-jest": "^29.2.6",
-    "vercel": "^32.3.0"
+    "vercel": "^41.2.2"
   },
   "resolutions": {
-    "glob": "^8.1.0",
+    "glob": "^10.3.3",
     "uuid": "^9.0.0",
     "debug": "^4.3.4",
     "rimraf": "^5.0.0",
     "gauge": "^5.0.0",
     "npmlog": "^7.0.1",
-    "abab": "^2.0.6",
     "are-we-there-yet": "^4.0.2",
     "domexception": "^4.0.0",
-    "inflight": "^1.0.6"
+    "inflight": "^1.0.7"
+  },
+  "overrides": {
+    "domexception": "^4.0.0",
+    "glob": "^10.3.3",
+    "inflight": "^1.0.7"
   },
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=10.0.0"
   },
-  "readme": "## Installation\n\n1. Install pnpm globally: `npm install -g pnpm@10.5.1`\n2. Install dependencies: `pnpm install`\n3. Start dev server: `pnpm dev`",
+  "readme": "## Installation\n\n1. Install pnpm globally: `npm install -g pnpm@10.5.1`\n2. Install dependencies: `pnpm install`\n3. Start dev server: `pnpm dev`\n\n## Note\n\nThe version constraint for the abab dependency has been pinned to 2.0.6.",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
