--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,25 +24,55 @@ jobs:
         node-version: '18'
         cache: 'pnpm'
         
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_ENV
+
+    - name: Setup pnpm cache
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+        
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --frozen-lockfile
       
     - name: Run tests
       run: pnpm test
+      env:
+        NODE_ENV: test
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
+    environment:
+      name: Production
+      url: ${{ steps.deploy.outputs.url }}
+    
     steps:
       - uses: actions/checkout@v3
       
       - name: Deploy to Vercel
+        id: deploy
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_AUTH_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./
-          vercel-args: '--prod'
+          vercel-args: '--prod --confirm'
+        env:
+          NODE_ENV: production
+          
+      - name: Verify Deployment
+        if: steps.deploy.outcome == 'success'
+        run: |
+          if [ -z "${{ steps.deploy.outputs.url }}" ]; then
+            echo "Deployment URL not found"
+            exit 1
+          fi
