Fix Vercel routing configuration by updating keys from 'source' and 'destination' to 'src' and 'dest'

--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,12 @@
   "outputDirectory": "dist",
   "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/$1"
+      "src": "/(.*)",
+      "dest": "/$1"
     },
     {
-      "source": "/[^.]+",
-      "destination": "/index.html"
+      "src": "/[^.]+",
+      "dest": "/index.html"
     }
   ]
 }
