--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "19.0.10",
+    "identity-obj-proxy": "3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "serve": "^14.2.1",
