--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "mathjs": "^14.2.1",
-    "next": "^15.2.0",
     "punycode": "^2.3.1"
   },
   "devDependencies": {
@@ -38,12 +37,14 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "19.0.10",
+    "@vitejs/plugin-react": "^4.2.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "serve": "^14.2.1",
     "ts-jest": "^29.2.6",
-    "vercel": "^41.2.2"
+    "vercel": "^41.2.2",
+    "vite": "^5.0.0"
   },
   "resolutions": {
     "glob": "^10.3.3",
